--- a/docs/howtos/nlp/index-nlp.mdx
+++ b/docs/howtos/nlp/index-nlp.mdx
@@ -25,11 +25,22 @@ Ensure that you install virtualenv in your system
 ```
 git clone --recurse-submodules https://github.com/applied-knowledge-systems/the-pattern.git
 cd the-pattern
+```
+
+### Step 3. Bring up the application
+
+```
 docker-compose -f docker-compose.dev.yml up --build -d
 ```
-### Step 3. Apply cluster configuration settings
+
+### Step 4. Apply cluster configuration settings
 
 You can deploy PyTorch and spacy to run on RedisGears.
+
+```
+bash post_start_dev.sh
+```
+
 
 :::important
 
@@ -37,17 +48,14 @@ For Data science-focused deployment, RedisCluster should be in HA mode with at l
 One need to change a few default parameters for rgcluster to accommodate the size of PyTorch and spacy libraries (each over 1GB zipped), gist with settings.
 :::
 
-```
-bash post_start_dev.sh
-```
 
-### Step 4. Create or activate Python virtual environment 
+### Step 5. Create or activate Python virtual environment 
 
 ```
 cd ./the-pattern-platform/
 ```
 
-### Step 5. Create new environment 
+### Step 6. Create new environment 
 
 You can create it via 
 
@@ -56,32 +64,35 @@ conda create -n pattern_env python=3.8
 ```
  or 
 
-activate via 
+Alternatively, you can activate by using the below CLI: 
 
 ```
 source ~/venv_cord19/bin/activate #or create new venv
 pip install -r requirements.txt
 ```
 
-### Step 6. Run pipeline
+### Step 7. Run pipeline
 
 ```
 bash cluster_pipeline.sh
 ```
 
 
-### Step 7. Validating the functionality of the NLP pipeline
+### Step 8. Validating the functionality of the NLP pipeline
 
 Wait for a bit and then check:
 
-### 1. Redis Graph populated: 
+### Verifying Redis Graph populated: 
 
 ```
 redis-cli -p 9001 -h 127.0.0.1 GRAPH.QUERY cord19medical "MATCH (n:entity) RETURN count(n) as entity_count" 
 redis-cli -p 9001 -h 127.0.0.1 GRAPH.QUERY cord19medical "MATCH (e:entity)-[r]->(t:entity) RETURN count(r) as edge_count"
 ```
-### 2. API responds: 
+### Checking API responds: 
 
 ```
 curl -i -H "Content-Type: application/json" -X POST -d '{"search":"How does temperature and humidity affect the transmission of 2019-nCoV"}' http://localhost:8080/gsearch
 ```
+
+
+
