--- a/docs/create/heroku/index-heroku.mdx
+++ b/docs/create/heroku/index-heroku.mdx
@@ -103,7 +103,7 @@ redis-11324.c82.us-east-1-2.ec2.cloud.redislabs.com:11324>
 
 You can use Heroku CLI to login and add Redis Enterprise Cloud as an add-on.
 
-### Step 1: Install Heroku on MacOS
+### Step 1: Install Heroku 
 
 
 ```
