--- a/docs/howtos/index-howtos.mdx
+++ b/docs/howtos/index-howtos.mdx
@@ -7,6 +7,9 @@ slug: /howtos
 
 import RedisCard from '@site/src/theme/RedisCard';
 
+
+## HowTos
+
 This page holds a catalog with dozens of ready-to-use app listings from Redis Labs. Now it is easy to build, test and  deploy software that runs using Redis.
 
 
@@ -15,6 +18,7 @@ This page holds a catalog with dozens of ready-to-use app listings from Redis La
  <div class="col">
      <RedisCard 
         title="Rate Limiting" 
+        imgPath="ratelimiting.png"
         description="How to build a Rate Limter using Redis" 
         preview="ratelimiting.png"
         page="/howtos/ratelimiting/"
@@ -29,9 +33,7 @@ This page holds a catalog with dozens of ready-to-use app listings from Redis La
         page="/howtos/shoppingcart/"
         />
  </div>
-</div>
 
-<div class="row">
 
  <div class="col">
     <RedisCard 
@@ -40,7 +42,9 @@ This page holds a catalog with dozens of ready-to-use app listings from Redis La
         page="/howtos/moviesdatabase/getting-started"
         />
  </div>
+</div>
 
+<div class="row">
 
  <div class="col">
     <RedisCard 
@@ -49,15 +53,13 @@ This page holds a catalog with dozens of ready-to-use app listings from Redis La
         page="/howtos/leaderboard"
         />
  </div>
-</div>
 
-<div class="row">
 
  <div class="col">
     <RedisCard
-        title="Chat Application"
-        description="Building a Chat Application using Redis"
-        page="/howtos/chatapp"
+        title="Fraud Detection"
+        description="Building Fraud Detection using Redis"
+        page="/howtos/frauddetection"
         />
  </div>
 
@@ -71,5 +73,64 @@ This page holds a catalog with dozens of ready-to-use app listings from Redis La
  </div>
 </div>
 
+<div class="row">
 
+ <div class="col">
+    <RedisCard
+        title="Chat Application"
+        description="Building a Chat application using Redis"
+        page="/howtos/chatapp"
+        />
+ </div>
+
+
+ <div class="col">
+    <RedisCard
+        title="HackerNews Clone"
+        description="How to build a HackerNews Clone Using RedisJSON"
+        page="/howtos/hackernews"
+        />
+ </div>
+
+ <div class="col">
+    <RedisCard
+        title="Redis Popup Store"
+        description="How to build a Popup Store using RedisGears and RedisTimeSeries"
+        page="/howtos/popupstore"
+        />
+ </div>
+</div>
+
+
+## Tutorials
+
+<div class="row">
+
+ <div class="col">
+    <RedisCard
+        title="Python based Rate Limiting application on Heroku using Redis"
+        description="How to build Python based Rate Limiting application on Heroku using Redis"
+        page="/howtos/herokupython"
+        />
+ </div>
+
+
+ <div class="col">
+    <RedisCard
+        title="NodeJS based Rate Limiting application on Heroku using Redis"
+        description="How to build NodeJS based Rate Limiting application on Heroku using Redis"
+        page="/howtos/herokunodejs"
+        />
+ </div>
+
+
+<div class="col">
+    <RedisCard
+        title="Getting Started with Redis on Heroku using Java"
+        description="How to build Java based application on Heroku using Redis"
+        page="/howtos/herokujava"
+        />
+ </div>
+
+</div>
 
