Added Heroku CLI

--- a/docs/howtos/herokujava/index-herokujava.mdx
+++ b/docs/howtos/herokujava/index-herokujava.mdx
@@ -1,6 +1,6 @@
 ---
 id: index-herokujava
-title: How to build Java based application on Heroku using Redis 
+title: Java based application on Heroku using Redis 
 sidebar_label: How to build Java based application on Heroku using Redis
 slug: /howtos/herokujava
 ---
