--- a/docs/create/heroku/index-heroku.mdx
+++ b/docs/create/heroku/index-heroku.mdx
@@ -132,7 +132,7 @@ Please note that this method won't allow you to choose Redis Modules while creat
 
 Under this section, we will be creating Heroku account, use Heroku CLI to login and add Redis Enterprise Cloud as an add-on.
 
-### Step 1: Install Heroku on MacOS
+### Step 1: Install Heroku 
 
 
    ```bash
@@ -150,74 +150,102 @@ Assuming that you already have Heroku account created, run the below command to 
     Logged in as your_email_address
    ```
 
-### Step 2: Installing Redis Enterprise Cloud Add-on
 
 
-Create a Heroku app
+### Step 2: Cloning the application
 
    ```bash
-    heroku apps:create kickstartredis
-    Creating ⬢ kickstartredis... done
-    https://kickstartredis.herokuapp.com/ | https://git.heroku.com/kickstartredis.git
+    $ git clone https://github.com/redis-developer/basic-redis-rate-limiting-demo-nodejs
    ```
+
+
+### Step 3. Create a heroku app
+
+
+   ```
+    $ heroku create
+    Creating app... done, ⬢ lit-island-48230
+    https://lit-island-48230.herokuapp.com/ | https://git.heroku.com/lit-island-48230.git
+  ```
+
+
+### Step 4. Start by installing the add-on:
 
 Ensure that you don’t have existing add-ons added in your account.
 
 
-  ```bash
-   $ heroku addons:create rediscloud -a kickstartredis
-   Creating rediscloud on ⬢ kickstartredis... free
-   Created rediscloud-cylindrical-24439 as REDISCLOUD_URL
-   Use heroku addons:docs rediscloud to view documentation
-  ```
+   ```bash
+    $ heroku addons:create rediscloud -a lit-island-48230
+    Creating rediscloud on ⬢ lit-island-48230... free
+    Created rediscloud-asymmetrical-85190 as REDISCLOUD_URL
+    Use heroku addons:docs rediscloud to view documentation
+   ```
 
 
 Once Redis Cloud has been added, you will notice a REDISCLOUD_URL config vars in your heroku config containing the username, password, hostname and port of your first Redis Cloud database.
 
 
-  ```bash
-   $ heroku config:get REDISCLOUD_URL -a kickstartredis
-   redis://default:password@redis-11324.c82.us-east-1-2.ec2.cloud.redislabs.com:11324
+   ```bash
+    heroku config:get REDISCLOUD_URL -a lit-island-48230
+    redis://default:ajSE7DuqhmGG7u2ZbSU0HTuEqTx1FuEQ@redis-17268.c256.us-east-1-2.ec2.cloud.redislabs.com:17268
+   ```
+
+
+   ```bash
+    $ heroku addons:info rediscloud
+    === rediscloud-asymmetrical-85190
+    Attachments:  lit-island-48230::REDISCLOUD
+    Installed at: Fri Mar 26 2021 07:52:43 GMT+0530 (India Standard Time)
+    Owning app:   lit-island-48230
+    Plan:         rediscloud:30
+    Price:        free
+    State:        created
   ```
-
-  ```bash
-   $ heroku addons:info rediscloud
-   === rediscloud-cylindrical-24439
-   Attachments:  kickstartredis::REDISCLOUD
-   Installed at: Fri Mar 19 2021 17:16:18 GMT+0530 (India Standard Time)
-   Owning app:   kickstartredis
-   Plan:         rediscloud:30
-   Price:        free
-   State:        created
-  ```
-
-
-  ```bash
-   $ heroku config -a kickstartredis
-   === kickstartredis Config Vars
-   REDISCLOUD_URL: redis://default:password@redis-15951.c232.us-east-1-2.ec2.cloud.redislabs.com:15951
-  ```
-
-### Step 3: Accessing the database
 
 
   ```bash
-   $ redis-cli -h redis-11324.c82.us-east-1-2.ec2.cloud.redislabs.com -p 11324
-   redis-11324.c82.us-east-1-2.ec2.cloud.redislabs.com:11324> auth default showspassword
-   OK
-   redis-11324.c82.us-east-1-2.ec2.cloud.redislabs.com:11324>
+   heroku config -a lit-island-48230
+   === lit-island-48230 Config Vars
+   REDISCLOUD_URL: redis://default:ajSE7DuqhmGG7u2ZbSU0HTuEqTx1FuEQ@redis-17268.c256.us-east-1-2.ec2.cloud.redislabs.com:17268
   ```
 
-You can even browse it through Heroku Dashboard:
 
 
-![heroku](heroku_selectrecloud.png)
+### Step 5. Accessing the Redis Enterprise Cloud dashboard
+
+Go to Heroku and click on “Installed add-ons”
+
+![heroku](heroku_addons.png)
 
 Click on “Redis Enterprise Cloud” and it will be redirected over Redis Enterprise Cloud Dashboard
 
-![heroku](heroku_recloud.png)
+![heroku](heroku_rediscloud1.png)
 
-As shown above, a database called "redis-kickstartredis-XXX" gets created over Redis Enterprise Cloud dashboard.
+
+
+### Step 6. Pushing the code to Heroku
+
+  ```bash
+   $ git push heroku
+
+
+   remote: -----> Launching...
+   remote:        Released v8
+   remote:        https://lit-island-48230.herokuapp.com/ deployed to Heroku
+   remote: 
+   remote: Verifying deploy... done.
+   To https://git.heroku.com/lit-island-48230.git
+   * [new branch]      master -> master
+  ```
+
+### Step 7. Accessing the rate limiting application
+
+Open https://lit-island-48230.herokuapp.com/ and access the rate limiting app.
+
+
+
+![heroku](heroku_ratelimiting1.png)
+
 
 
 
