--- a/docs/howtos/index-howtos.mdx
+++ b/docs/howtos/index-howtos.mdx
@@ -108,7 +108,7 @@ This page holds a catalog with dozens of ready-to-use app listings from Redis La
 
  <div class="col">
     <RedisCard
-        title="Python based Rate Limiting application on Heroku using Redis"
+        title="Redis on Heroku using Python"
         description="How to build Python based Rate Limiting application on Heroku using Redis"
         page="/howtos/herokupython"
         />
@@ -117,7 +117,7 @@ This page holds a catalog with dozens of ready-to-use app listings from Redis La
 
  <div class="col">
     <RedisCard
-        title="NodeJS based Rate Limiting application on Heroku using Redis"
+        title="NodeJS Heroku using Redis"
         description="How to build NodeJS based Rate Limiting application on Heroku using Redis"
         page="/howtos/herokunodejs"
         />
@@ -126,7 +126,7 @@ This page holds a catalog with dozens of ready-to-use app listings from Redis La
 
 <div class="col">
     <RedisCard
-        title="Getting Started with Redis on Heroku using Java"
+        title="Java on Heroku using Redis"
         description="How to build Java based application on Heroku using Redis"
         page="/howtos/herokujava"
         />
