--- a/docs/create/heroku/index-heroku.mdx
+++ b/docs/create/heroku/index-heroku.mdx
@@ -113,7 +113,7 @@ Run the below CLI to have a functioning Git repository that contains a simple ap
     * [new branch]      master -> master
    ```
 
-### Step 6. Accessing the rate limiting application
+### Step 6. Accessing the app 
 
 ![heroku](ratelimiting.png)
 
@@ -123,7 +123,7 @@ Run the below CLI to have a functioning Git repository that contains a simple ap
 
 <TabItem value="CLI">
 
-## Using CLI
+## Using Heroku CLI
 
 :::important
 Please note that this method won't allow you to choose Redis Modules while creating Redis database. Also, it doesn't provide you with the flexibility to choose Cloud platform of your choice. It is recommended to use Redis Enterprise Cloud directly. [Click here to learn more](/create/rediscloud).
@@ -238,7 +238,7 @@ Click on “Redis Enterprise Cloud” and it will be redirected over Redis Enter
    * [new branch]      master -> master
   ```
 
-### Step 7. Accessing the rate limiting application
+### Step 7. Accessing the app
 
 Open https://lit-island-48230.herokuapp.com/ and access the rate limiting app.
 
@@ -259,42 +259,60 @@ Open https://lit-island-48230.herokuapp.com/ and access the rate limiting app.
 Please note that this method won't allow you to choose Redis Modules while creating Redis database. Also, it doesn't provide you with the flexibility to choose Cloud platform of your choice. It is recommended to use Redis Enterprise Cloud directly. [Click here to learn more](/create/rediscloud).
 :::
 
-### Step 1: Sign-in to Heroku
+### Step 1: Sign up for a Heroku account
+
+Create a heroku account and sign-in to the dashboard
+
+![heroku](create_heroku.png)
+
+### Step 2. Create a new Heroku app
+
+Create a new app called "redislabs"
+
+![heroku](heroku_appname.png)
 
 
-Open  https://dashboard.heroku.com/apps and create a new sample application. For this demo, I have deployed an application with the name “kickstartredis”.
+### Step 3. Choose GitHub
 
-### Step 2: Install Redis Enterprise Cloud
-
-Open https://elements.heroku.com/addons/rediscloud and click on “Install Redis Enterprise Cloud” to sign up with Heroku.
-
-![heroku](heroku2.png)
-
-### Step 3: Select Free Plan
-
-For this demonstration, we will select a 30MB Free plan(see Plans and Pricing below).
-
-![heroku](pricing.png)
-
-### Step 4: Fill up Online Order Form
-
-Once you sign in, you will see “Online Order Form” as shown below:
-
-![heroku](orderform.png)
-
-### Step 5. Provision Redis Enterprise Cloud database
-
-Provision Redis Enterprise Cloud on your personal application(which in the above case is “kickstartredis”.
-
-![heroku](heroku_selectrecloud.png)
-
-Click on “Redis Enterprise Cloud” and it will be redirected over Redis Enterprise Cloud Dashboard
-
-![heroku](heroku_recloud.png)
-
-As shown above, a database called "redis-kickstartredis-XXX" gets created over Redis Enterprise Cloud dashboard.
+Select "Github" as a deployment method
 
 
+![heroku](heroku_selectgit.png)
+
+
+### Step 4. Connect to GitHub
+
+![heroku](heroku_gitconnect.png)
+
+### Step 5. Install Redis Enteprise Cloud as an add-on
+
+
+![heroku](heroku_recloudinstall1.png)
+
+### Step 6. Fill up order online form
+
+![heroku](heroku_orderform.png)
+
+
+### Step 7. Deploy the app
+
+Before deploying the app, modify the environmental variables as per your application:
+
+![heroku](heroku_env1.png)
+
+
+Go to "Deploy" section under the application dashboard and click on "Deploy Branch"
+
+![heroku](heroku_finaldeploy.png)
+
+
+Click "Open App" on the top right corner.
+
+![heroku](heroku_access2.png)
+
+### Step 8. Accessing the app 
+
+![heroku](heroku_finalratelimit.png)
 
  </TabItem>
 </Tabs>
