--- a/docs/howtos/herokupython/index-herokupython.mdx
+++ b/docs/howtos/herokupython/index-herokupython.mdx
@@ -1,6 +1,6 @@
 ---
 id: index-herokupython
-title: Redis on Heroku using Python
+title: Python based application on Heroku using Redis
 sidebar_label: How to build Python based application on Heroku using Redis
 slug: /howtos/herokupython
 ---
