--- a/docs/howtos/herokunodejs/index-herokunodejs.mdx
+++ b/docs/howtos/herokunodejs/index-herokunodejs.mdx
@@ -1,6 +1,6 @@
 ---
 id: index-herokunodejs
-title: Redis on Heroku using NodeJS
+title: NodeJS based application on Heroku using Redis
 sidebar_label: How to build NodeJS based application on Heroku using Redis 
 slug: /howtos/herokunodejs
 ---
