--- a/docs/howtos/frauddetection/index-frauddetection.mdx
+++ b/docs/howtos/frauddetection/index-frauddetection.mdx
@@ -26,7 +26,7 @@ Here’s what we have used:
 - The data is then pushed to Redis Stream which is consumed by Redis Gears for processing
 - RedisTimeseries gets updated and Redis Data source for Grafana displays the dashboard
 
-![Fraud Detection](fraud_architecture.png)
+![Fraud Detection](frauddetection.png)
 
 ### Step #1: Installing Docker
 
