--- a/docs/howtos/herokupython/index-herokupython.mdx
+++ b/docs/howtos/herokupython/index-herokupython.mdx
@@ -8,32 +8,51 @@ slug: /howtos/herokupython
 import RedisCard from '@site/src/theme/RedisCard';
 
 
-### Step 1. Preparing the Heroku environment
+### Step 1. Create Redis Enterprise Cloud
 
-[Follow the link](../create/heroku) to setup Redis database on Heroku 
+Create your free Redis Enterprise Cloud account. [Follow this link to create Redis Enterprise Cloud](/create/rediscloud) subscription and database as shown below:
 
+![heroku](rediscloud.png)
 
-
-### Step 2. Prepare the app
-
-In this step, you will prepare a sample application that’s ready to be deployed to Heroku.
+Save the database endpoint URL and password for future reference.
 
 
-```
-$ git clone https://github.com/redis-developer/basic-rate-limiting-demo-python
-$cd basic-rate-limiting-demo-python
-```
+### Step 2. Create a Heroku account
+
+If you are using Heroku for the first time, create your new Heroku account [through this link](https://signup.heroku.com/login)
+
+![heroku](create_heroku.png)
 
 
-You now have a functioning Git repository that contains a simple application as well as a package.json file, which is used by Node’s dependency manager.
+### Step 3. Install Heroku CLI on your system
 
-### Step 3. Deploy the app
+   ```macos
+    brew install heroku
+   ```
 
-It is recommended to use Redis Enterprise Cloud Page for creating the database as it allows you to add Redis modules of your choice. Also, it provides you freedom to choose Cloud other than AWS for creating the database.
+### Step 4. Login to Heroku
+
+   ```bash
+    heroku login
+    heroku: Press any key to open up the browser to login or q to exit:
+    Opening browser to https://cli-auth.heroku.com/auth/cli/browser/XXXXXXXXXXA
+    Logging in... done
+    Logged in as your_email_address
+   ```
 
 
-In this step you will deploy the app to Heroku.
-Create an app on Heroku, which prepares Heroku to receive your source code.
+### Step 5. Connect your application to Redis Enterprise Cloud
+
+For this demonstration, we will be using a [Sample Rate Limiting application](https://github.com/redis-developer/basic-rate-limiting-demo-python)
+
+#### Clone the repository
+
+   ```bash
+    git clone https://github.com/redis-developer/basic-rate-limiting-demo-python
+   ```
+
+Run the below CLI to have a functioning Git repository that contains a simple application as well as a package.json file.
+
 
 
 ```
@@ -42,10 +61,16 @@ Creating app... done, ⬢ fast-reef-76278
 https://fast-reef-76278.herokuapp.com/ | https://git.heroku.com/fast-reef-76278.git
 ```
 
-When you create an app, a git remote (called heroku) is also created and associated with your local git repository.
+### Step 6. Setting up Environmental variable
+
+Go to Heroku dashboard, click "Settings" and set REDIS_ENDPOINT_URI and REDIS_PASSWORD under the Config Vars.
+Refer to Step 1 for the reference.
+
+![heroku](heroku_app1_env.png)
 
 
-### Step 4. Deploy your code
+
+### Step 7. Deploy your code
 
 Heroku generates a random name (in this case fast-reef-76278) for your app, or you can pass a parameter to specify your own app name.
 Now deploy your code:
